# statsapiclient

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  README.rst  pyproject.toml  schema.xml  setup.py
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: _build.yml  _publish.yml  _test.yml  build.yml  publish.yml  publish_build.yml  publish_test.yml  test.yml  test_and_build.yml
docs/statsapiclient/: constants.html  index.html  schedule.html  teams.html  utils.html
docs/statsapiclient/games/: box_score.html  game.html  index.html  line_score.html  play_by_play.html
examples/: examples.ipynb
statsapiclient/: __init__.py  box_score.py  client.py  constants.py  fetch_json.py  franchises.py  game.py  games.py  line_score.py  plays.py  schedule.py  shifts.py  teams.py  utils.py
statsapiclient/game/: __init__.py  box_score.py  line_score.py  play_by_play.py  summary.py
statsapiclient/games/: box_score.py  game.py  line_score.py  summary.py
statsapiclient/shifts/: __init__.py  parser.py
tests/: test_box_score.py  test_game.py  test_game_summary.py  test_games.py  test_line_score.py  test_plays.py  test_schedule.py  test_shifts.py  test_statsapiclient.py  test_summary.py  test_teams.py  test_utils.py
tests/mocks/: schedule.mock.py
