[tool.poetry]
name = "statsapiclient"
version = "0.2.1"
description = "A wrapper around the NHL’s JSON API."
homepage="https://github.com/bplabombarda/statsapiclient"
repository="https://github.com/bplabombarda/statsapiclient"
documentation="https://github.com/bplabombarda/statsapiclient#README.md"
license="MPL-2.0"
authors = ["Brett LaBombarda <bplabombarda@gmail.com>"]
readme = "README.md"
keywords = ["nhl", "hockey"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.2"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.8.4"
pylint = "^2.5.3"
pytest = "^3.0"
pytest-cov = "^2.8"
tox = "^3.19.0"
twine = "^1.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
